--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
       <section class="bloc bgc-white l-bloc" id="bloc-2-services">
         <div class="container bloc-md">
           <div class="row">
-            <div  class="col-sm-12 text-center">
+            <div class="col-sm-12 text-center">
               <p class="adaptative">
-                La chouette agence est une entreprise de web design qui aide les entreprises à devenir attractive et visible sur internet
-            </p>
+                La chouette agence est une entreprise de web design qui aide les
+                entreprises à devenir attractive et visible sur internet
+              </p>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
