--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a class="navbar-brand" href="index.html"
               ><img
                 src="img/la-chouette-agence.png"
-                alt="paris web design logo agence web meilleure agence"
+                alt="La chouette agence"
                 height="40"
             /></a>
             <div class="keywords" style="color: #cccccc; font-size: 1px">
@@ -103,7 +103,7 @@
                 src="img/logo.png"
                 class="center-block image-resize-mode"
                 width="100"
-                alt="La chouette agence, agence web paris, création logo paris"
+                alt="création logo paris"
               />
               <h1 class="text-center hero-bloc-text tc-white">
                 La chouette agence.
@@ -199,7 +199,7 @@
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
               <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
+                alt="stratégie web"
                 src="img/citation.png"
               />
             </div>
@@ -257,7 +257,7 @@
           <div class="row">
             <div class="col-sm-12 text-center">
               <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
+                alt="stratégie web"
                 src="img/title2.png"
               />
             </div>
@@ -272,7 +272,7 @@
                 data-frame="snapshot-lb"
                 ><img
                   src="img/1.jpg"
-                  alt="paris web design logo agence web meilleure agence et refonte site web journal"
+                  alt="refonte site web journal"
                   class="img-responsive portfolio-thumb"
               /></a>
               <h3 class="mg-md text-center">
@@ -293,7 +293,7 @@
                 ><img
                   src="img/2.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
+                  alt="Création d'un site web pour photographes"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
@@ -315,7 +315,7 @@
                 ><img
                   src="img/3.bmp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
+                  alt="Création d'un site web pour voyageur"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
@@ -335,7 +335,7 @@
                 ><img
                   src="img/4.bmp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
+                  alt="Création d'un site web pour agence de mariage"
               /></a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
