--- a/index.html
+++ b/index.html
@@ -198,10 +198,12 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <img
-                alt="stratégie web"
-                src="img/citation.png"
-              />
+              <p class="adaptative">
+                "La chouette agence est une excellente agence web ! Les web
+                designers ont réussi à capturer l'essence de notre entreprise et
+                à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes
+                en ligne à Lyon."<br/><span class="adaptative-2">Maxime Guibard, PDG de À vos fourchettes</span>
+              </p>
             </div>
           </div>
         </div>
@@ -256,10 +258,7 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <img
-                alt="stratégie web"
-                src="img/title2.png"
-              />
+              <p class="adaptative">Nous travaillons avec beaucoup de clients,<br/>voici nos réalisations.</p>
             </div>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
