--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
-    <script defer src="./js/jquery-2.1.0.js"></script>
+    <script async src="./js/jquery-2.1.0.js"></script>
     <script defer src="./js/bootstrap.js"></script>
-    <script defer src="./js/blocs.js"></script>
+    <script async src="./js/blocs.js"></script>
     <script defer src="./js/jquery.touchSwipe.js" defer></script>
     <script defer src="./js/gmaps.js"></script>
 
@@ -307,12 +307,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/3.bmp"
+                data-lightbox="img/3.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/3.bmp"
+                  src="img/3.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="Création d'un site web pour voyageur"
               /></a>
@@ -327,12 +327,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/4.bmp"
+                data-lightbox="img/4.jpg"
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/4.bmp"
+                  src="img/4.jpg"
                   class="img-responsive portfolio-thumb"
                   alt="Création d'un site web pour agence de mariage"
               /></a>
