--- a/index.html
+++ b/index.html
@@ -39,20 +39,12 @@
       <div class="container bloc-sm">
         <nav class="navbar row">
           <div class="navbar-header">
-            <div class="keywords" style="color: #cccccc; font-size: 1px">
-              Agence web à paris, stratégie web, web design, illustrations,
-              design de site web, site web, web, internet, site internet, site
-            </div>
             <a class="navbar-brand" href="index.html"
               ><img
                 src="img/la-chouette-agence.png"
                 alt="La chouette agence"
                 height="40"
             /></a>
-            <div class="keywords" style="color: #cccccc; font-size: 1px">
-              Agence web à paris, stratégie web, web design, illustrations,
-              design de site web, site web, web, internet, site internet, site
-            </div>
             <button
               id="nav-toggle"
               type="button"
@@ -202,7 +194,9 @@
                 "La chouette agence est une excellente agence web ! Les web
                 designers ont réussi à capturer l'essence de notre entreprise et
                 à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes
-                en ligne à Lyon."<br/><span class="adaptative-2">Maxime Guibard, PDG de À vos fourchettes</span>
+                en ligne à Lyon."<br /><span class="adaptative-2"
+                  >Maxime Guibard, PDG de À vos fourchettes</span
+                >
               </p>
             </div>
           </div>
@@ -258,7 +252,10 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <p class="adaptative">Nous travaillons avec beaucoup de clients,<br/>voici nos réalisations.</p>
+              <p class="adaptative">
+                Nous travaillons avec beaucoup de clients,<br />voici nos
+                réalisations.
+              </p>
             </div>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
