--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
-    <script defer src="./js/jquery-2.1.0.js"></script>
-    <script defer src="./js/bootstrap.js"></script>
-    <script defer src="./js/blocs.js"></script>
-    <script defer src="./js/jquery.touchSwipe.js" defer></script>
-    <script defer src="./js/gmaps.js"></script>
+   
 
     <title>La chouette agence</title>
 
@@ -480,5 +476,11 @@
       </div>
     </footer>
     <!-- Footer - bloc-8 END -->
+
+    <script async src="./js/jquery-2.1.0.js"></script>
+    <script async src="./js/bootstrap.js"></script>
+    <script async src="./js/blocs.js"></script>
+    <script async src="./js/jquery.touchSwipe.js" defer></script>
+    <script async src="./js/gmaps.js"></script>
   </body>
 </html>
