--- a/index.html
+++ b/index.html
@@ -478,9 +478,9 @@
     </footer>
     <!-- Footer - bloc-8 END -->
 
-    <script async src="./js/jquery-2.1.0.js"></script>
-    <script async  src="./js/bootstrap.js"></script>
-    <script async  src="./js/blocs.js"></script>
-    <script async  src="./js/jquery.touchSwipe.js"></script>
+    <script  src="./js/jquery-2.1.0.js"></script>
+    <script  src="./js/bootstrap.js"></script>
+    <script  src="./js/blocs.js"></script>
+    <script  src="./js/jquery.touchSwipe.js"></script>
   </body>
 </html>
