changements au niveau des titres amelioration de la structure du site

--- a/page2.html
+++ b/page2.html
@@ -108,8 +108,6 @@
               <form
                 id="form_1"
                 novalidate
-                success-msg="Your message has been sent."
-                fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"
               >
                 <div class="form-group">
                   <label> Nom </label>
@@ -159,10 +157,10 @@
               </form>
             </div>
             <div class="col-sm-6">
-              <p>
+              <h2 class="h-adaptative">
                 contact@lachouetteagence.com<br />2 place Sathonay 69001 Lyon<br />Ouvert
                 de 9h à 18h, du lundi au vendredi<br />
-              </p>
+              </h2>
             </div>
           </div>
         </div>
@@ -182,9 +180,9 @@
       <div class="container bloc-sm">
         <div class="row">
           <div class="col-sm-12">
-            <p class="text-center white">
+            <h3 class=" h-adaptative text-center white">
               La chouette agence - Agence web basée à Lyon.<br />
-            </p>
+            </h3>
             <div class="row row-no-gutters social">
               <div class="col-sm-3">
                 <div class="text-center">
