--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <p class="adaptative">
+              <h2 class="adaptative">
                 La chouette agence est une entreprise de web design qui aide les
-                entreprises à devenir attractive et visible sur internet
-              </p>
+                plateformes à devenir attractive et visible sur internet
+              </h2>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
@@ -135,7 +135,7 @@
                   "
                 ></span>
               </div>
-              <h2 class="mg-md text-center">Web design</h2>
+              <p class="adaptative mg-md text-center">Web design</p>
               <p class="text-center">
                 Que vous ayez un site web qui a besoin d&rsquo;un
                 rafraîchissement ou que vous partiez de zéro, laissez-nous vous
@@ -154,7 +154,7 @@
                   "
                 ></span>
               </div>
-              <h2 id="h2" class="mg-md text-center">&nbsp;Stratégie</h2>
+              <p id="h2" class=" adaptative mg-md text-center">&nbsp;Stratégie</p>
               <p class="text-center">
                 Plutôt que de suggérer des designs à la mode, nous travaillerons
                 avec vous pour comprendre vos objectifs commerciaux afin de vous
@@ -173,7 +173,7 @@
                   "
                 ></span>
               </div>
-              <h2 class="mg-md text-center">Illustrations</h2>
+              <p class=" adaptative mg-md text-center">Illustrations<p>
               <p class="text-center">
                 Un bon design n'est rien sans de bonnes illustrations. Laissez
                 faire notre équipe de graphistes talentueux pour donner à vos
@@ -354,10 +354,10 @@
       >
         <div class="container bloc-lg">
           <div class="row">
-            <h2 class="mg-md text-center tc-white">
+            <h3 class=" adaptative mg-md text-center tc-white">
               Prêt pour redonner vie à votre projet ?<br />Contactez notre
               équipe !
-            </h2>
+            </h3>
             <div class="col-sm-12 text-center">
               <a
                 href="page2.html"
