--- a/page2.html
+++ b/page2.html
@@ -18,11 +18,6 @@
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
 
-    <script src="./js/jquery-2.1.0.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/blocs.min.js"></script>
-    <script src="./js/jqBootstrapValidation.js"></script>
-    <script src="./js/formHandler.js"></script>
     <title>Contact</title>
 
     <!-- Analytics -->
@@ -218,5 +213,9 @@
       </div>
     </footer>
     <!-- Footer - bloc-8 END -->
+    <script  src="./js/jquery-2.1.0.js"></script>
+    <script  src="./js/bootstrap.js"></script>
+    <script  src="./js/blocs.js"></script>
+    <script  src="./js/jquery.touchSwipe.js"></script>
   </body>
 </html>
