--- a/page2.html
+++ b/page2.html
@@ -2,10 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="" />
     <meta
       name="description"
-      content="La chouette agence est une entreprise de web design basée à lyon, le langage non verbal du webdesign apporte une valeur ajoutée précieuse et une image professionnelle à l’entreprise ou au produit."
+      content="La chouette agence est une entreprise de web design basée à lyon, cette page vous permet de nous contacter."
     />
     <meta
       name="viewport"
