--- a/page2.html
+++ b/page2.html
@@ -49,7 +49,7 @@
           <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
             <ul class="site-navigation nav navbar-nav">
               <li>
-                <a class="acc-margin" href="index.html">Accueil</a>
+                <a href="index.html">Accueil</a>
               </li>
               <li></li>
               <li>
