modif noms de pages

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
               </li>
               <li></li>
               <li>
-                <a href="page2.html">page2 &gt;</a>
+                <a href="contact.html">suivant &gt;</a>
               </li>
             </ul>
           </div>
@@ -211,9 +211,9 @@
       </div>
     </footer>
     <!-- Footer - bloc-8 END -->
-    <script  src="./js/jquery-2.1.0.js"></script>
-    <script  src="./js/bootstrap.js"></script>
-    <script  src="./js/blocs.js"></script>
-    <script  src="./js/jquery.touchSwipe.js"></script>
+    <script   src="./js/jquery-2.1.0.js"></script>
+    <script   src="./js/bootstrap.js"></script>
+    <script   src="./js/blocs.js"></script>
+    <script   src="./js/jquery.touchSwipe.js"></script>
   </body>
 </html>
