--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </li>
               <li></li>
               <li>
-                <a href="page2.html">page2 &gt;</a>
+                <a href="contact.html">suivant &gt;</a>
               </li>
             </ul>
           </div>
@@ -95,7 +95,7 @@
               </h1>
               <div class="text-center">
                 <a
-                  href="page2.html"
+                  href="contact.html"
                   class="
                     btn btn-lg btn-clean btn-rd
                     cta-hero
@@ -227,7 +227,7 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><a class="ltc-white bold-link" href="page2.html"
+                <br /><br /><a class="ltc-white bold-link" href="contact.html"
                   >Contactez notre équipe</a
                 ><br />
               </p>
@@ -360,7 +360,7 @@
             </h3>
             <div class="col-sm-12 text-center">
               <a
-                href="page2.html"
+                href="contact.html"
                 class="
                   btn btn-atomic-tangerine btn-clean btn-rd btn-lg
                   cta-hero
@@ -474,9 +474,9 @@
     </footer>
     <!-- Footer - bloc-8 END -->
 
-    <script  src="./js/jquery-2.1.0.js"></script>
-    <script  src="./js/bootstrap.js"></script>
-    <script  src="./js/blocs.js"></script>
-    <script  src="./js/jquery.touchSwipe.js"></script>
+    <script   src="./js/jquery-2.1.0.js"></script>
+    <script   src="./js/bootstrap.js"></script>
+    <script   src="./js/blocs.js"></script>
+    <script   src="./js/jquery.touchSwipe.js"></script>
   </body>
 </html>
