--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
         <nav class="navbar row">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html"
-              ><img
+              ><img tabindex="0"
                 src="img/la-chouette-agence.png"
                 alt="La chouette agence"
                 height="40"
             /></a>
             <button
+              role="nav-toggle"
               id="nav-toggle"
               type="button"
               class="ui-navbar-toggle navbar-toggle"
@@ -53,11 +54,11 @@
           <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
             <ul class="site-navigation nav navbar-nav">
               <li>
-                <a href="index.html">Accueil</a>
+                <a role="button" tabindex="0" href="index.html">Accueil</a>
               </li>
               <li></li>
               <li>
-                <a href="contact.html">suivant &gt;</a>
+                <a role="button" tabindex="0" href="contact.html">suivant &gt;</a>
               </li>
             </ul>
           </div>
