--- a/contact.html
+++ b/contact.html
@@ -34,16 +34,16 @@
                 alt="La chouette agence"
                 height="40"
             /></a>
-            <button
+            <button aria-expanded="false" tabindex="0"
               id="nav-toggle"
               type="button"
               class="ui-navbar-toggle navbar-toggle"
               data-toggle="collapse"
               data-target=".navbar-1"
             >
-              <span class="sr-only">Toggle navigation</span
-              ><span class="icon-bar"></span><span class="icon-bar"></span
-              ><span class="icon-bar"></span>
+              <span tabindex="0" class="sr-only">Toggle navigation</span
+              ><span tabindex="0" class="icon-bar"></span><span tabindex="0" class="icon-bar"></span
+              ><span tabindex="0" class="icon-bar"></span>
             </button>
           </div>
           <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -104,7 +104,7 @@
               >
                 <div class="form-group">
                   <label> Nom </label>
-                  <input id="name" class="form-control" required />
+                  <input aria-label="nom" id="name" class="form-control" required />
                 </div>
                 <div class="form-group">
                   <label> Adresse email </label>
@@ -161,7 +161,7 @@
       <!-- bloc-7 END -->
 
       <!-- ScrollToTop Button -->
-      <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
+      <a tableindex="0" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
         ><span class="fa fa-chevron-up"></span
       ></a>
       <!-- ScrollToTop Button END-->
@@ -179,28 +179,28 @@
             <div class="row row-no-gutters social">
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a class="social" href="index.html"
+                  <a class="social" href="https://twitter.com/?lang=fr"
                     ><span class="fa fa-twitter icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a class="social" href="index.html"
-                    ><span class="fa fa-facebook icon-md"></span
+                  <a aria-label="dribbble" class="social" href="https://www.facebook.com"
+                    ><span  class="fa fa-facebook icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a class="social" href="index.html"
+                  <a aria-label="dribbble" class="social" href="https://dribbble.com"
                     ><span class="fa fa-dribbble icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a class="social" href="index.html"
+                  <a aria-label="instagram" class="social" href="https://www.instagram.com/?hl=fr"
                     ><span class="fa fa-instagram icon-md"></span
                   ></a>
                 </div>
