--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
               data-toggle="collapse"
               data-target=".navbar-1"
             >
-              <span class="sr-only">Toggle navigation</span
-              ><span class="icon-bar"></span><span class="icon-bar"></span
-              ><span class="icon-bar"></span>
+              <span tabeindex="0" class="sr-only">Toggle navigation</span
+              ><span tabeindex="0" class="icon-bar"></span><span tabindex="0" class="icon-bar"></span
+              ><span tabindex="0" class="icon-bar"></span>
             </button>
           </div>
           <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
