--- a/index.html
+++ b/index.html
@@ -387,28 +387,28 @@
             <div class="row row-no-gutters social">
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a class="social" href="index.html"
+                  <a role="link" aria-label="twitter" class="social" class="social" href="index.html"
                     ><span class="fa fa-twitter icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a class="social" href="index.html"
+                  <a role="link" aria-label="facebook" class="social" href="index.html"
                     ><span class="fa fa-facebook icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a class="social" href="index.html"
+                  <a role="link" aria-label="dribbble" class="social" href="index.html"
                     ><span class="fa fa-dribbble icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a class="social" href="index.html"
+                  <a role="link" aria-label="instagram" class="social" href="index.html"
                     ><span class="fa fa-instagram icon-md"></span
                   ></a>
                 </div>
