changement de couleurs

--- a/contact.html
+++ b/contact.html
@@ -29,21 +29,25 @@
         <nav class="navbar row">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html"
-              ><img tabindex="0" role="link"
+              ><img
+                tabindex="0"
+                role="link"
                 src="img/la-chouette-agence.png"
                 alt="La chouette agencet"
                 height="40"
             /></a>
-            <button aria-expanded="false" tabindex="0"
+            <button
+              aria-expanded="false"
+              tabindex="0"
               id="nav-toggle"
               type="button"
               class="ui-navbar-toggle navbar-toggle"
               data-toggle="collapse"
               data-target=".navbar-1"
             >
-              <span tabindex="0" class="sr-only">navigation</span
-              ><span tabindex="0" class="icon-bar"></span><span tabindex="0" class="icon-bar"></span
-              ><span tabindex="0" class="icon-bar"></span>
+              <span class="sr-only">navigation</span
+              ><span class="icon-bar"></span><span class="icon-bar"></span
+              ><span class="icon-bar"></span>
             </button>
           </div>
           <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -81,7 +85,10 @@
               <h1 tabindex="0" class="text-center hero-bloc-text tc-white">
                 Parlons web design !
               </h1>
-              <p tabindex="0" class="text-center mg-lg tc-white tight-width-whitespace">
+              <p
+                tabindex="0"
+                class="text-center mg-lg tc-white tight-width-whitespace"
+              >
                 Nous sommes ravis que vous souhaitiez collaborer avec notre
                 agence.<br />
                 Parlez-nous de votre projet en complétant le formulaire
@@ -98,18 +105,20 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-6">
-              <form
-                id="form_1"
-                novalidate
-              >
+              <form id="form_1" novalidate>
                 <div class="form-group">
                   <label> Nom </label>
-                  <input  aria-label=" ecrivez votre nom" id="name" class="form-control" required />
+                  <input
+                    aria-label=" ecrivez votre nom"
+                    id="name"
+                    class="form-control"
+                    required
+                  />
                 </div>
                 <div class="form-group">
                   <label> Adresse email </label>
                   <input
-                  aria-label=" ecrivez votre adresse email"
+                    aria-label=" ecrivez votre adresse email"
                     id="email"
                     class="form-control"
                     type="email"
@@ -119,7 +128,7 @@
                 <div class="form-group">
                   <label> Comment nous avez-vous connu ? </label>
                   <input
-                  aria-label="comment nous avez-vous connu?"
+                    aria-label="comment nous avez-vous connu?"
                     class="form-control"
                     type="email"
                     required
@@ -131,7 +140,7 @@
                     Brief de votre projet (Ajoutez autant de détails que
                     nécessaire)<br /> </label
                   ><textarea
-                  aria-label="brief de votre projet"
+                    aria-label="brief de votre projet"
                     id="message"
                     class="form-control"
                     rows="4"
@@ -164,8 +173,8 @@
       <!-- bloc-7 END -->
 
       <!-- ScrollToTop Button -->
-      <a  class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
-        ><span  class="fa fa-chevron-up"></span
+      <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"
+        ><span class="fa fa-chevron-up"></span
       ></a>
       <!-- ScrollToTop Button END-->
     </main>
@@ -176,34 +185,50 @@
       <div class="container bloc-sm">
         <div class="row">
           <div class="col-sm-12">
-            <h3 tabindex="0" class=" h-adaptative text-center white">
+            <h3 tabindex="0" class="h-adaptative text-center white">
               La chouette agence - Agence web basée à Lyon.<br />
             </h3>
             <div class="row row-no-gutters social">
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a role="link" aria-label="twitter" class="social" href="https://twitter.com"
+                  <a
+                    role="link"
+                    aria-label="twitter"
+                    class="social"
+                    href="https://twitter.com"
                     ><span class="fa fa-twitter icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a role="link" aria-label="facebook" class="social" href="https://www.facebook.com"
-                    ><span  class="fa fa-facebook icon-md"></span
+                  <a
+                    role="link"
+                    aria-label="facebook"
+                    class="social"
+                    href="https://www.facebook.com"
+                    ><span class="fa fa-facebook icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a role="link" aria-label="dribbble" class="social" href="https://dribbble.com"
+                  <a
+                    role="link"
+                    aria-label="dribbble"
+                    class="social"
+                    href="https://dribbble.com"
                     ><span class="fa fa-dribbble icon-md"></span
                   ></a>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="text-center">
-                  <a  role="link" aria-label="instagram"  class="social" href="https://www.instagram.com/?hl=fr"
+                  <a
+                    role="link"
+                    aria-label="instagram"
+                    class="social"
+                    href="https://www.instagram.com/?hl=fr"
                     ><span class="fa fa-instagram icon-md"></span
                   ></a>
                 </div>
@@ -214,9 +239,9 @@
       </div>
     </footer>
     <!-- Footer - bloc-8 END -->
-    <script   src="./js/jquery-2.1.0.js"></script>
-    <script   src="./js/bootstrap.js"></script>
-    <script   src="./js/blocs.js"></script>
-    <script   src="./js/jquery.touchSwipe.js"></script>
+    <script src="./js/jquery-2.1.0.js"></script>
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/blocs.js"></script>
+    <script src="./js/jquery.touchSwipe.js"></script>
   </body>
 </html>
