--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
               data-toggle="collapse"
               data-target=".navbar-1"
             >
-              <span tabindex="0"  class="sr-only">navigation</span
-              ><span tabindex="0"  class="icon-bar"></span><span tabindex="0" class="icon-bar"></span
-              ><span tabindex="0"  class="icon-bar"></span>
+              <span   class="sr-only">navigation</span
+              ><span  class="icon-bar"></span><span  class="icon-bar"></span
+              ><span  class="icon-bar"></span>
             </button>
           </div>
           <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -421,9 +421,6 @@
                   ></a>
                 </div>
               </div>
-              <div class="keywords" style="color: #f3976c">
-                Agence web à paris, stratégie web, web design, illustrations,
-                design de site web, site web, web, internet, site internet, site
               </div>
             </div>
           </div>
