--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,8 @@
       <div class="container bloc-sm">
         <nav class="navbar row">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"
+            <a tabindex="0" class="navbar-brand" href="index.html"
               ><img
-                tabindex="0"
-                role="link"
                 src="img/la-chouette-agence.png"
                 alt="La chouette agencet"
                 height="40"
@@ -192,7 +190,6 @@
               <div class="col-sm-3">
                 <div class="text-center">
                   <a
-                    role="link"
                     aria-label="twitter"
                     class="social"
                     href="https://twitter.com"
@@ -203,7 +200,6 @@
               <div class="col-sm-3">
                 <div class="text-center">
                   <a
-                    role="link"
                     aria-label="facebook"
                     class="social"
                     href="https://www.facebook.com"
@@ -214,7 +210,6 @@
               <div class="col-sm-3">
                 <div class="text-center">
                   <a
-                    role="link"
                     aria-label="dribbble"
                     class="social"
                     href="https://dribbble.com"
@@ -225,7 +220,6 @@
               <div class="col-sm-3">
                 <div class="text-center">
                   <a
-                    role="link"
                     aria-label="instagram"
                     class="social"
                     href="https://www.instagram.com/?hl=fr"
