--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
-    <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
+    
 
     <title>La chouette agence</title>
 
@@ -271,7 +271,9 @@
           </div>
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
-              <a
+              <a 
+              tabindex="0"
+              role="button"
                 href="#"
                 data-lightbox="img/1.jpg"
                 data-gallery-id="gallery-1"
