control d'etats et , j'ai enlevé des tabindex inutile

--- a/contact.html
+++ b/contact.html
@@ -152,6 +152,7 @@
                   ></textarea>
                 </div>
                 <button
+                aria-pressed="false"
                   class="
                     bloc-button
                     btn btn-lg btn-block
